Revert "Added viewpager."
This reverts commit 86e24216e69f27eab7047511a4b7e3dbb6051ace.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     }
     productFlavors {
          demo {
-             applicationId "com.beta.people"
+             packageName "com.beta.people"
          }
         /*demo {
             packageName "com.dhruva.svaad"
