added more ui screens
me screen, history, user-history, location, create , and more ui
changes...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     }
     productFlavors {
          demo {
-             applicationId "com.beta.people"
+             applicationId "com.dhruva.people"
          }
         /*demo {
             packageName "com.dhruva.svaad"
